Tests/Should_succeed/5_Functions/11_Nested.decaf
class Test {
	void m1(){
		WriteString("0=0");
		WriteString("\n");
	}
	void m2(){
		m1();
	}
	void main(){
		m1();
	}
}