tests/Should_fail/5_Functions/01_CallNotEnoughArgs.decaf
class Test {
	void m1(int a){
		WriteString("0=1");
		WriteString("\n");
	}
	void main(){
		m1();
	}
}